Fix bug 419007 - Invalid ics files don\'t trigger INVALID_TIMEZONE error, times are assumed as floating. r=philipp